# LangGraph-Heath-Insurance-Approval-Agent

./: Readme.md  agentUI.py  data_loader.py  eligibility_agent.py  explanation_agent.py  fraud_detection_agent.py  langgraph_workflow.py  policy_agent.py  pyproject.toml  requirements.txt  validation_agent.py  vectordb.py  workflow_graph.mmd
data/: claim_decisions.csv  claims.csv  insurance_rules.csv  patients.csv
data/policyDocs/: MedicareA_policy.txt  MedicareB_policy.txt  MedicareC_policy.txt
